Upload Twig Vues

--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -13,10 +13,10 @@
   {{ parent() }}
 
   <div class="row">
-    <img src="../public/img/snowtrick-background.jpg" class="img-fluid my-5" alt="snowtrick">
+    <img src="../public/img/snowtrick-background.jpg" class="img-fluid" alt="snowtrick">
   </div>
   <!-- Tricks Section -->
-  <div class="row">
+  <div class="row my-4">
     <div class="col-lg-1 mb-1">
     </div>
     <div class="col-lg-2 mb-4">
@@ -79,7 +79,7 @@
   </div>
   <!-- /.row -->
 
-  <div class="row">
+  <div class="row my-4">
     <div class="col-lg-1 mb-1">
     </div>
     <div class="col-lg-2 mb-4">
@@ -142,7 +142,7 @@
   </div>
   <!-- /.row -->
 
-  <div class="row">
+  <div class="row my-4">
     <div class="col-lg-1 mb-1">
     </div>
     <div class="col-lg-2 mb-4">
