--- a/templates/Parts/_header.html.twig
+++ b/templates/Parts/_header.html.twig
@@ -1,7 +1,7 @@
 {# templates/Parts/header.html.twig #}
 
 <!-- Navigation -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light fixed-top" style="box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light fixed-top" style="opacity: 0.9; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);">
     <div class="container">
       <a class="navbar-brand text-dark" href="#">SnowTrick</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
