--- a/templates/Parts/_header.html.twig
+++ b/templates/Parts/_header.html.twig
@@ -3,7 +3,7 @@
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light fixed-top" style="opacity: 0.9; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);">
     <div class="container">
-      <a class="navbar-brand text-dark" href="#">SnowTrick</a>
+      <a class="navbar-brand text-dark" href="#">SnowTricks</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-dark"></span>
       </button>
@@ -14,7 +14,7 @@
           </li>
           <li class="nav-item dropdown text-dark">
             <a class="nav-link text-dark dropdown-toggle text-dark" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Figures
+              Tricks
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="{{ path('app_trick_add') }}">Ajouter une figure</a>
