Upload Trick Templates

--- a/templates/Trick/_form.html.twig
+++ b/templates/Trick/_form.html.twig
@@ -2,12 +2,13 @@
 
 {# Cette vue sera heritée par add.html.twig et edit.html.twig #}
 
-<h3>Ajouter une figure</h3>
-
-{# Afficher ici le formulaire #}
-
 <div class="form">
-
-    <!--Insérer ici le formulaire-->
-
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title text-uppercase">Ajouter un Trick</h4>
+                    {{ form(form) }}
+            </div>
+        </div>
+    </div>
 </div>
