Upload Updated Templates

--- a/templates/Trick/_form.html.twig
+++ b/templates/Trick/_form.html.twig
@@ -7,7 +7,33 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title text-uppercase">Ajouter un Trick</h4>
-                    {{ form(form) }}
+                    {{ form_start(form) }}
+                    <div class='row'>
+                        <div class="col-md-3">
+                            {{ form_row(form.name) }}
+                            {{ form_row(form.category) }}
+                        </div>
+                        <div class="col-md-9">
+                            {{ form_row(form.description) }}
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class="col-md-4">
+                            {{ form_row(form.date_add) }}
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class="col-md-3">
+                            <h3>Images et vidéos</h3>
+                            {{ form_row(form.mediaUrl) }}
+                        </div> 
+                    </div>
+
+                    {{ form_end(form) }}
+                {# <form method="POST" action="{{ path('upload_test') }}" enctype="multipart/form-data">
+                    <input type="file" name="image">
+                    <button type="submit" class="btn btn-primary">Upload!</button>
+                </form> #}
             </div>
         </div>
     </div>
