--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -13,7 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--Custom CSS-->
-    <link src="../templates/modern-business/css/modern-business.css" rel="stylesheet">
+    {# <link src="../templates/modern-business/css/modern-business.css" rel="stylesheet"> #}
+    <link src="../quixlab-master/css/style.css" rel="stylesheet">
     {% endblock %} 
     <title>{% block title %} SnowTrick - {% endblock %}</title>
 </head>
