--- a/templates/Trick/_form.html.twig
+++ b/templates/Trick/_form.html.twig
@@ -25,7 +25,7 @@
                     <div class='row'>
                         <div class="col-md-3">
                             <h3>Images et vidéos</h3>
-                            {{ form_row(form.mediaUrl) }}
+                            {# {{ form_row(form.mediaUrl) }} #}
                         </div> 
                     </div>
                 {{ form_end(form) }}
