--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -13,6 +13,14 @@
     <!-- Custom Stylesheet -->
     <link href="../quixlab-master/css/style.css" rel="stylesheet">
 
+    {% block stylesheets %}
+            {# 'app' must match the first argument to addEntry() in webpack.config.js #}
+            {{ encore_entry_link_tags('app') }}
+
+            <!-- Renders a link tag (if your module requires any CSS)
+                 <link rel="stylesheet" href="/build/app.css"> -->
+    {% endblock %}
+
 </head>
 
 <body>
@@ -21,6 +29,14 @@
 {% endblock %}
 
 {% block footer %} {% endblock %}
+
+{% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+
+            <!-- Renders app.js & a webpack runtime.js file
+                <script src="/build/runtime.js"></script>
+                <script src="/build/app.js"></script> -->
+{% endblock %}
 
     <!--Scripts-->
     <script src="../quixlab-master/plugins/common/common.min.js"></script>
