--- a/templates/Trick/_form.html.twig
+++ b/templates/Trick/_form.html.twig
@@ -21,16 +21,17 @@
                     <div class='row'>
                         <div class="col-md-3">
                             <h3>Images et vidéos</h3>
+                            {# {{ form_row(form.medias) }} #}
                             {# {{ form_row(form.mediaFile, {'attr': {'placeholder': 'Ajouter un ou plusieurs médias'}}) }} #}
                         </div>
-                        <ul id="medias-list" data-prototype="{{ form_widget(form.medias.vars.prototype)|e }}" data-widget-tags="{{ '<li></li>'|e }}" data-widget-counter="{{ form.medias|length }}">
+                        {# <ul id="medias-list" data-prototype="{{ form_widget(form.medias.vars.prototype)|e }}" data-widget-tags="{{ '<li></li>'|e }}" data-widget-counter="{{ form.medias|length }}">
                             {% for medias in form.medias %}
                                 <li>
                                     {{ form_errors(medias) }}
                                     {{ form_widget(medias) }}
                                 </li>
                             {% endfor %}
-                        </ul>
+                        </ul> #}
                         <div class="list-tricks-images col-md-9">
                             <img id="uploaded-image-1" src="{{ asset('img/default/200x200.jpg') }}" alt="trick-image" class="preview img-thumbnail" width="200px" height="200px">
                             <img id="uploaded-image-2" src="{{ asset('img/default/200x200.jpg') }}" alt="trick-image" class="preview img-thumbnail" width="200px" height="200px">
@@ -39,7 +40,7 @@
                             <img id="uploaded-image-4" src="{{ asset('img/default/200x200.jpg') }}" alt="trick-image" class="preview img-thumbnail" width="200px" height="200px">
                         </div> 
                     </div>
-                    <button type="button" class="add-another-collection-widget" data-list-selector="#medias-list">Ajouter un autre média</button>
+                    {# <button type="button" class="add-another-collection-widget" data-list-selector="#medias-list">Ajouter un autre média</button> #}
                 {{ form_end(form) }}
             </div>
         </div>
